[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CurrentTime" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_right = 180.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Lap time: "

[node name="BestTime" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -405.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.270588, 0.270588, 1 )
text = "Best time: "

[node name="Restart" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.5
margin_top = -81.0
margin_right = 160.5
custom_fonts/font = SubResource( 3 )
text = "Press \"R\" to restart"

[node name="TimeToBeat" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -407.0
margin_top = 68.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Time to beat: "

[node name="Tip" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "\"R\" restart"
